test/expected/declare_nmo_eq_rki_rk.out
struct S; declare = as non-member operator (reference to S, int)
         ^
10: error: operator = can only be a member
